--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,3 +1,18 @@
+<nav>
+  <div class='nav-wrapper'>
+    <ul class='right hide-on-med-and-down'>
+      <li>
+        <a href='#'>About</a>
+      </li>
+      <li>
+        <a href='/login'>Login</a>
+      </li>
+      <li>
+        <a href='/signup'>Sign Up</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class='container'>
   <div class='row'>
     <h1 class='col s4 offset-s4'>FleetKeep</h1>
