--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -1,3 +1,19 @@
+<nav>
+  <div class='nav-wrapper'>
+    <a href='/' class='brand-logo'>FleetKeep</a>
+    <ul class='right hide-on-med-and-down'>
+      <li>
+        <a href='#'>About</a>
+      </li>
+      <li>
+        <a href='/login'>Login</a>
+      </li>
+      <li>
+        <a href='/signup'>Sign Up</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <form class='container' ng-submit='ctrl.addUser(user)'>
   <div class='row'>
     <h3 class='col s4 offset-s4'>Sign Up</h3>
@@ -18,7 +34,7 @@
     <label class='col s4 offset-s3'>Job Title</label>
   </div>
   <div class='row form-group'>
-    <select class="browser-default col s4 offset-s3" ng-model='user.title' required=>
+    <select class="browser-default col s4 offset-s3" ng-model='user.title' required=true>
       <option value="" disabled selected>Choose your option</option>
       <option value="Driver">Driver</option>
       <option value="Maintenance">Maintenance</option>
