--- a/client/views/report.html
+++ b/client/views/report.html
@@ -12,14 +12,14 @@
   </div>
 </nav>
 <h3>New Report</h3>
-<form>
+<form class='container'>
   <div class='row form-group'>
     <label class='col s4 offset-s3'>Truck Number</label>
   </div>
   <div class='row form-group'>
     <select class="browser-default col s4 offset-s3" ng-model='report.truck_id' required=true>
       <option value="" disabled selected>Choose your option</option>
-      <option ng-repeat='vehicle in ctrl.allVehicles' value="{{vehicle.call}}">{{vehicle.call}}</option>
+      <option ng-repeat='vehicle in ctrl.allVehicles' value={{vehicle.id}}>{{vehicle.call}}</option>
     </select>
   </div>
   <div class='row'>
@@ -28,5 +28,10 @@
   <div class='row'>
     <input class='col s4 offset-s3' type='number' ng-model='report.odo_num' required=true/>
   </div>
-  
+  <div class='row'>
+    <button ng-click='ctrl.begin(report.truck_id)' class="waves-effect waves-light btn-large col s2 offset-s4">Begin</button>
+  </div>
 </form>
+<div class='row'>
+  <img class='vehicleImg col s8 offset-s1' ng-src='{{ctrl.vehicleImg}}' alt='truck body damage map' />
+</div>
