Attempted and aborted use of canvas factory

--- a/client/views/report.html
+++ b/client/views/report.html
@@ -33,5 +33,9 @@
   </div>
 </form>
 <div class='row'>
-  <img class='vehicleImg col s8 offset-s1' ng-src='{{ctrl.vehicleImg}}' alt='truck body damage map' />
+  <canvas id='canvas'></canvas>
+  <img class='vehicleImg col s8 offset-s1' ng-src='{{ctrl.vehicleImg}}' alt='truck body damage map' id='carOrTruck' />
 </div>
+<!-- <div class='row'>
+
+</div> -->
