--- a/client/views/report.html
+++ b/client/views/report.html
@@ -36,6 +36,17 @@
   <canvas id='canvas'></canvas>
   <img class='vehicleImg col s8 offset-s1' ng-src='{{ctrl.vehicleImg}}' alt='truck body damage map' id='carOrTruck' />
 </div>
-<!-- <div class='row'>
-
-</div> -->
+<div class='container' id='damage-report'>
+  <form>
+    <div class='row'>
+      <label class='col s4 offset-s2'>Damage Description</label>
+    </div>
+    <div class='row'>
+      <input class='col s8 offset-s2' type='text' ng-model='damage.desc' placeholder='e.g. Scratch found on driver door. About 4" in length and down to metal.' required=true/>
+    </div>
+    <div class='row'>
+      <button ng-click='' class="waves-effect waves-light btn-large col s2 offset-s3">Submit</button>
+      <button ng-click='' class="waves-effect waves-light btn-large col s2 offset-s1">Cancel</button>
+    </div>
+  </form>
+</div>
