--- a/client/views/report.html
+++ b/client/views/report.html
@@ -179,12 +179,12 @@
   <canvas class='col offset-s1' id='canvas' width='800' height="600" ng-click='ctrl.markDamage($event, report.truck_id)'></canvas>
 </div>
 <div class='container' id='damage-report'>
-  <form>
+  <form >
     <div class='row'>
       <label class='col s4 offset-s2'>Damage Description</label>
     </div>
     <div class='row'>
-      <input class='col s8 offset-s2' type='text' ng-model='damage.desc' placeholder='e.g. Scratch found on driver door. About 4" in length and down to metal.' required=true/>
+      <input class='col s8 offset-s2' id='desc' type='text' ng-model='damage.desc' placeholder='e.g. Scratch found on driver door. About 4" in length and down to metal.' required=true/>
     </div>
     <div class='row'>
       <button ng-click='ctrl.damageReport(damage)' class="waves-effect waves-light btn-large col s2 offset-s3">Submit</button>
