--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -49,10 +49,13 @@
           {{report.desc}}
         </td>
         <td>
-          {{report.date}}
+          {{report.created_at | date : format : short }}
         </td>
         <td>
           {{report.status}}
+        </td>
+        <td>
+          <a href='dash/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
         </td>
       </tr>
     </tbody>
