--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -19,14 +19,15 @@
   <a href='/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
 </div>
 <div class='row'>
-  <div class='row form-group'>
-    <label class='col s4 offset-s3'>View By:</label>
+  <div class='form-group'>
+    <label class='col s1 offset-s8'>View By:</label>
   </div>
-  <select class="browser-default col s4 offset-s3" ng-model='ctrl.selection'>
+  <select class="browser-default col s2" ng-model='ctrl.selection'>
     <option value="" disabled selected>Choose your option</option>
     <option value='driver_id'>Driver ID</option>
     <option value='truck_id'>Truck ID</option>
     <option value='status'>Status</option>
+    <option value='created_at'>Date of Report</option>
   </select>
 </div>
 <div class='row'>
@@ -49,7 +50,7 @@
       </th>
     </thead>
     <tbody>
-      <tr ng-repeat='report in ctrl.reports | orderBy: status:true || ctrl.selection'>
+      <tr ng-repeat='report in ctrl.reports | orderBy: ctrl.selection || status:true'>
         <td>
           {{report.truck_id}}
         </td>
@@ -66,7 +67,7 @@
           {{report.status}}
         </td>
         <td>
-          <a href='dash/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
+          <a href='review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
         </td>
       </tr>
     </tbody>
