--- a/client/views/review.html
+++ b/client/views/review.html
@@ -12,4 +12,7 @@
   </div>
 </nav>
 <h2>Review Page</h2>
-<button ng-click='ctrl.updateStatus()' class="waves-effect waves-light btn-large col s2 offset-s3">Reviewed</button>
+<div class='row'>
+  <button ng-click='ctrl.updateStatus()' class="waves-effect waves-light btn-large col s2 offset-s3">Reviewed</button>
+  <button ng-click='ctrl.markFixed()' class="waves-effect waves-light btn-large col s2 offset-s3">Fixed</button>
+</div>
