--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -11,13 +11,14 @@
     </ul>
   </div>
 </nav>
-<h1>User Dashboard</h1>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+<h1>Supervisor Dashboard</h1>
 <div class='row'>
   <a href='/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
 </div>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</p>
+<highchart id="status-pie" config="ctrl.pieConfig"></highchart>
 <div class='row'>
   <div class='form-group'>
     <label class='col s1 offset-s8'>View By:</label>
