Pie chart working well. Fix seed files

--- a/client/views/report.html
+++ b/client/views/report.html
@@ -6,7 +6,7 @@
         <a href='#'>Settings</a>
       </li>
       <li ng-click='ctrl.logout()'>
-        <a href='#'>Logout</a>
+        <a href='/'>Logout</a>
       </li>
     </ul>
   </div>
