--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -18,7 +18,10 @@
 <p>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<highchart id="status-pie" config="ctrl.pieConfig"></highchart>
+<div class='row'>
+  <highchart id="status-pie" class='col s6' config="ctrl.pieConfig"></highchart>
+  <highchart id="status-pie" class='col s6' config="ctrl.lineConfig"></highchart>
+</div>
 <div class='row'>
   <div class='form-group'>
     <label class='col s1 offset-s8'>View By:</label>
