Fixing urls and removing HTML5mode

--- a/client/views/report.html
+++ b/client/views/report.html
@@ -1,12 +1,12 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='/dash' class='brand-logo'>FleetKeep</a>
+    <a href='#/dash' class='brand-logo'>FleetKeep</a>
     <ul class='right hide-on-med-and-down'>
       <li>
         <a href='#'>Settings</a>
       </li>
       <li ng-click='ctrl.logout()'>
-        <a href='/'>Logout</a>
+        <a href='#'>Logout</a>
       </li>
     </ul>
   </div>
@@ -229,4 +229,4 @@
   </form>
 </div>
 <button ng-click='ctrl.submitReport(report)' class="waves-effect waves-light btn-large col s2 offset-s3">Submit</button>
-<a ng-href='/dash' class="waves-effect waves-light btn-large col s2 offset-s1">Cancel</a>
+<a ng-href='#/dash' class="waves-effect waves-light btn-large col s2 offset-s1">Cancel</a>
