--- a/client/views/review.html
+++ b/client/views/review.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='/dash' class='brand-logo'>FleetKeep</a>
+    <a href='#/dash' class='brand-logo'>FleetKeep</a>
     <ul class='right hide-on-med-and-down'>
       <li>
         <a href='#'>Settings</a>
