--- a/client/views/home.html
+++ b/client/views/home.html
@@ -5,10 +5,10 @@
         <a href='#'>About</a>
       </li>
       <li>
-        <a href='/login'>Login</a>
+        <a href='#/login'>Login</a>
       </li>
       <li>
-        <a href='/signup'>Sign Up</a>
+        <a href='#/signup'>Sign Up</a>
       </li>
     </ul>
   </div>
