--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -1,15 +1,15 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='/' class='brand-logo'>FleetKeep</a>
+    <a href='#/' class='brand-logo'>FleetKeep</a>
     <ul class='right hide-on-med-and-down'>
       <li>
         <a href='#'>About</a>
       </li>
       <li>
-        <a href='/login'>Login</a>
+        <a href='#/login'>Login</a>
       </li>
       <li>
-        <a href='/signup'>Sign Up</a>
+        <a href='#/signup'>Sign Up</a>
       </li>
     </ul>
   </div>
