URL changes, again

--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -75,7 +75,7 @@
           {{report.status}}
         </td>
         <td>
-          <a href='review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
+          <a href='#/review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
         </td>
       </tr>
     </tbody>
@@ -131,7 +131,7 @@
           {{out.status}}
         </td>
         <td>
-          <a href='review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
+          <a href='#/review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
         </td>
       </tr>
     </tbody>
