--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='/' class='brand-logo'>FleetKeep</a>
+    <a href='#/' class='brand-logo'>FleetKeep</a>
     <ul class='right hide-on-med-and-down'>
       <li>
         <a href='#'>About</a>
