Build out confirmation page and collect signature

--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -2,6 +2,30 @@ body {
   background-color: RGBA(246, 246, 246, 1);
 }
 
+nav {
+  background-color: indigo;
+}
+
+.brand-logo {
+  font-family: 'Exo 2', sans-serif;
+}
+
+.confirm-body {
+  background-color: white;
+  width: 75%;
+  margin-left: 12.5%;
+  padding-bottom: 1%;
+  margin-top: 1%;
+}
+
+.confirm-btns {
+  padding-top: 1%;
+}
+
+.confirm-group {
+  font-size: 125%;
+}
+
 #damage-report {
   border: 1px solid black;
   border-radius: 2px;
@@ -11,4 +35,19 @@ body {
 #sign-here {
   height: 100px;
   border-bottom: 1px solid black;
+}
+
+@media print {
+  * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
+  a, a:visited { text-decoration: underline; }
+  a[href]:after { content: " (" attr(href) ")"; }
+  abbr[title]:after { content: " (" attr(title) ")"; }
+  .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
+  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  thead { display: table-header-group; } /* h5bp.com/t */
+  tr, img { page-break-inside: avoid; }
+  img { max-width: 100% !important; }
+  @page { margin: 0.5cm; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3 { page-break-after: avoid; }
 }
