Prepping print capability

--- a/client/views/confirm.html
+++ b/client/views/confirm.html
@@ -199,6 +199,7 @@
   </div>
 </div>
 <div class='row confirm-btns'>
-  <button ng-click='ctrl.confirm()' class="waves-effect waves-light btn-large col s2 offset-s3">Confirm Report</button>
+  <a href="javascript:window.print()"><button class="waves-effect waves-light btn-large col s2 offset-s2">Print Form</button></a>
+  <button ng-click='ctrl.confirm()' class="waves-effect waves-light btn-large col s2 offset-s1">Confirm Report</button>
   <button ng-click='ctrl.clearSign()' class="waves-effect waves-light btn-large col s2 offset-s1">Clear Signature</button>
 </div>
