--- a/client/views/confirm.html
+++ b/client/views/confirm.html
@@ -11,7 +11,7 @@
     </ul>
   </div>
 </nav>
-<div class='confirm-body col'>
+<div class='col' id='confirm-body'>
   <div class='row'>
     <div class='col s10 offset-s1'>
       <div class='row'>
@@ -199,7 +199,7 @@
   </div>
 </div>
 <div class='row confirm-btns'>
-  <a href="javascript:window.print()"><button class="waves-effect waves-light btn-large col s2 offset-s2">Print Form</button></a>
+  <button ng-click='ctrl.print()' class="waves-effect waves-light btn-large col s2 offset-s2">Print Form</button>
   <button ng-click='ctrl.confirm()' class="waves-effect waves-light btn-large col s2 offset-s1">Confirm Report</button>
   <button ng-click='ctrl.clearSign()' class="waves-effect waves-light btn-large col s2 offset-s1">Clear Signature</button>
 </div>
