--- a/client/views/review.html
+++ b/client/views/review.html
@@ -13,6 +13,7 @@
 </nav>
 <h2>Review Page</h2>
 <div class='row'>
+  <img ng-src='https://s3.amazonaws.com/fleetkeep-reports/Reports/{{ctrl.report.$$state.value.id}}.jpg' alt='signature' />
   <form class='review-form'>
     <div class='form-group'>
       <label class='col s1 offset-s3'>Set Status:</label>
@@ -31,4 +32,5 @@
     </div>
     <button ng-click='ctrl.updateStatus(ctrl.report.$$state.value)' class="waves-effect waves-light btn-large col s2 offset-s3">Submit</button>
   </form>
+  <button ng-click='ctrl.getSig()' class="waves-effect waves-light btn-large col s2 offset-s3">See Signature</button>
 </div>
