--- a/client/views/review.html
+++ b/client/views/review.html
@@ -13,7 +13,7 @@
 </nav>
 <h2>Review Page</h2>
 <div class='row'>
-  <img ng-src='https://s3.amazonaws.com/fleetkeep-reports/Reports/{{ctrl.report.$$state.value.id}}.jpg' alt='signature' />
+  <img ng-src='https://s3.amazonaws.com/fleetkeep-reports/Reports/{{ctrl.report.$$state.value.report_id}}.jpg' alt='signature' />
   <form class='review-form'>
     <div class='form-group'>
       <label class='col s1 offset-s3'>Set Status:</label>
