--- a/client/views/confirm.html
+++ b/client/views/confirm.html
@@ -1,7 +1,7 @@
 <nav>
   <div class='nav-wrapper'>
     <a href='#/dash' class='brand-logo'>FleetKeep</a>
-    <ul class='right hide-on-med-and-down'>
+    <ul class='right'>
       <li>
         <a href='#'>Settings</a>
       </li>
