--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,28 +1,27 @@
-<nav>
-  <div class='nav-wrapper'>
-    <ul class='right hide-on-med-and-down'>
-      <li>
-        <a href='#'>About</a>
-      </li>
-      <li>
-        <a href='#/login'>Login</a>
-      </li>
-      <li>
-        <a href='#/signup'>Sign Up</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class='container'>
-  <div class='row'>
-    <h1 class='col s4 offset-s4'>FleetKeep</h1>
-  </div>
-  <div class='row'>
-    <p class='flow-text col s8 offset-s2'>
-      FleetKeep is the vehicle fleet management application designed to simplify your vehicle reporting. Our simple reporting and administrative dashboard views allow for both drivers and supervisors to access and input the necessary data to get your fleet on the street.
-    </p>
-  </div>
-  <div class='row'>
-    <button class="waves-effect waves-light btn-large col s2 offset-s5">Learn More</button>
+<div class='home-body'>
+  <nav class='home-nav'>
+    <div class='nav-wrapper'>
+      <ul class='right'>
+        <li>
+          <a href='#'>About</a>
+        </li>
+        <li>
+          <a href='#/login'>Login</a>
+        </li>
+        <li>
+          <a href='#/signup'>Sign Up</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class='container'>
+    <div class='row'>
+      <h1 class='home-title col s6'>FleetKeep</h1>
+    </div>
+    <div class='row'>
+      <p class='flow-text col s6 home-info'>
+        FleetKeep is the vehicle fleet management application designed to simplify your vehicle reporting. Our simple reporting and administrative dashboard views allow for both drivers and supervisors to access and input the necessary data to get your fleet on the street.
+      </p>
+    </div>
   </div>
 </div>
