--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,7 +1,7 @@
 <nav>
   <div class='nav-wrapper'>
     <a href='#/' class='brand-logo'>FleetKeep</a>
-    <ul class='right hide-on-med-and-down'>
+    <ul class='right'>
       <li>
         <a href='#'>About</a>
       </li>
