--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,4 +1,4 @@
-<div class='home-body'>
+<div class='home-body row'>
   <nav class='home-nav'>
     <div class='nav-wrapper'>
       <ul class='right'>
@@ -14,12 +14,12 @@
       </ul>
     </div>
   </nav>
-  <div class='container'>
+  <div class='container homies col s8'>
     <div class='row'>
-      <h1 class='home-title col s6'>FleetKeep</h1>
+      <h1 class='home-title col s10'>FleetKeep</h1>
     </div>
     <div class='row'>
-      <p class='flow-text col s6 home-info'>
+      <p class='flow-text col s8 home-info'>
         FleetKeep is the vehicle fleet management application designed to simplify your vehicle reporting. Our simple reporting and administrative dashboard views allow for both drivers and supervisors to access and input the necessary data to get your fleet on the street.
       </p>
     </div>
