--- a/client/views/home.html
+++ b/client/views/home.html
@@ -6,10 +6,7 @@
           <a href='#'>About</a>
         </li>
         <li>
-          <a href='#/login'>Login</a>
-        </li>
-        <li>
-          <a href='#/signup'>Sign Up</a>
+          <a href='#/login'>Login/Register</a>
         </li>
       </ul>
     </div>
