Alter url on driver dash

--- a/client/views/driver.html
+++ b/client/views/driver.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/dash' class='brand-logo'>FleetKeep</a>
+    <a href='#/driver' class='brand-logo'>FleetKeep</a>
     <ul class='right'>
       <li>
         <a href='#'>Settings</a>
